--- a/fitbook-ios/Info.plist
+++ b/fitbook-ios/Info.plist
@@ -18,6 +18,28 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb986848648068958</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>986848648068958</string>
+    <key>FacebookDisplayName</key>
+    <string>GymPortalApi</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>For displaying thumbnails of pages and users</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
