naprawa testów, nskeyed archiver/ns userdata dla logowania, wyłączenie blokady http (NSAppTransportSecurity), pełne workflow logowania, api dzała

--- a/fitbook-ios/Info.plist
+++ b/fitbook-ios/Info.plist
@@ -40,6 +40,11 @@
     </array>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>For displaying thumbnails of pages and users</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
