--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,3 +2,15 @@ excluded:
   - Pods
   - fitbook-iosTests
   - fitbook-iosUITests
+identifier_name:
+excluded:
+- id
+- x
+- y
+line_length: 125
+type_body_length:
+- 150 # warning
+- 200 # error
+file_length:
+warning: 200
+error: 300
